--- a/library.properties
+++ b/library.properties
@@ -1,1 +1,9 @@
-
+name=ZikoMatrix
+version=0.0.1
+author=Zakaria Elalaoui 
+maintainer=Zakaria Elalaoui
+sentence=A Matrix library
+paragraph=Like this project? Please star it on Github !
+category=Data Processing
+url=https://github.com/zakarialaoui10/ZikoMatrix.git
+architectures=*
